--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -461,7 +461,7 @@ html, body {
 }
 
 #non-div {
-    background-color: chartreuse;
+    background-color: #010116;
     width: 100%;
     opacity: 0%;
     height: 25vw;
